--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -202,38 +202,45 @@
 
 
 
-<!---------------------------------------------------------------------------------->
-<!--------------------------------FOOTER-------------------------------------------------->
+ <!---------------------------------------------------------------------------------->
+    <!--------------------------------FOOTER-------------------------------------------------->
 
-<footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
-    <div class="grupo-1">
-        <div class="box">
-            <figure>
-                <a href="#">
-                    <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
-                </a>
-            </figure>
-        </div>
-        <div class="box">
-            <p class="mt-4 mb-5"><i class="bi bi-geo-alt"></i> <strong>Dirección:</strong> Calle Larios, Málaga,
-                España</p>
-            <p class="mb-5"><i class="bi bi-telephone"></i> <strong>Teléfono:</strong> 123456789</p>
-            <p class="mb-5"><i class="bi bi-envelope"></i> <strong>Email:</strong> info@malagadreamhome.com</p>
-        </div>
-        <div class="box">
-            <h2 class="mb-5">Síguenos</h2>
-            <div class="red-social">
-                <a href="#" class="bi bi-facebook"></a>
-                <a href="#" class="bi bi-twitter"></a>
-                <a href="#" class="bi bi-instagram"></a>
-                <a href="#" class="bi bi-linkedin"></a>
+    <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
+                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
+                    malagadreamhome@gmail.es</p>
+            </div>
+
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redes-social">
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="grupo-2">
-        <small>&copy; 2023 <b>MálagaDreamHome</b> - Todos los Derechos Reservados.</small>
-    </div>
-</footer>
+
+        <div class="grupo-2">
+            <small>
+                &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
+            </small>
+        </div>
+    </footer>
+
+    <!---------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------->
+
 
 
     <!-- All Js -->
