--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -109,25 +109,24 @@
     </div>
 </section>
 
-<!---------------------------------------------------------FOOTER----------------------------------------------->
-
-
+ <!---------------------------------------------------------------------------------->
+    <!--------------------------------FOOTER-------------------------------------------------->
 
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="index.html">
+                    <a href="#">
                         <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
                     </a>
                 </figure>
             </div>
             <div class="box">
                 <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
-                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i
-                        class="bi bi-envelope-fill"></i> malagadreamhome@gmail.es</p>
+                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
+                    malagadreamhome@gmail.es</p>
             </div>
-    
+
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redes-social">
@@ -138,13 +137,16 @@
                 </div>
             </div>
         </div>
-    
+
         <div class="grupo-2">
             <small>
                 &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
             </small>
         </div>
     </footer>
+
+    <!---------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------->
 
 
     <!-- All Js -->
