--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -211,23 +211,22 @@
         </div>
     </section>
 
-    <!---------------------------------------------------------------------------------->
-    <!-----------------------------------FOOTER----------------------------------------------->
+     <!---------------------------------------------------------------------------------->
+    <!--------------------------------FOOTER-------------------------------------------------->
 
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="index.html">
+                    <a href="#">
                         <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <p class="mt-4 mb-5">
-                    <i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
-                    malagadreamhome@gmail.es
-                </p>
+                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
+                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
+                    malagadreamhome@gmail.es</p>
             </div>
 
             <div class="box">
@@ -247,6 +246,10 @@
             </small>
         </div>
     </footer>
+
+    <!---------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------->
+
 
     <!-- All Js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
