--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -172,7 +172,7 @@
     </div>
 </div>
 <div class="container text-center"> <!-- Contenedor adicional para centrar el botón -->
-    <button onclick="aplicarFiltros()" class="btn btn-primary">Aplicar Filtros</button>
+    <button id="btnAplicarFiltros" class="btn btn-primary">Aplicar Filtros</button>
 </div>
 
 
