--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -113,10 +113,16 @@
 <div class="filtro-container">
     <div class="filtro-content">
         <!-- Fila 1 -->
-        <div class="filtrocalle">
-            <label for="filtroCalle">Calle:</label>
-            <input type="text" id="filtroCalle" class="small-input">
+        <div class="filtrotipo">
+            <label for="filtroTipo">Tipo de inmueble:</label>
+            <select id="filtroTipo" class="small-input">
+                <option value="cualquiera">Cualquiera</option>
+                <option value="Piso">Piso</option>
+                <option value="Apartamento">Apartamento</option>
+                <option value="Casa">Casa</option>
+            </select>
         </div>
+       
         <div class="filtroop">
             <label for="filtroOperacion">Operación:</label>
             <select id="filtroOperacion" class="small-input">
@@ -126,21 +132,32 @@
                 <option value="ambos">Ambos</option>
             </select>
         </div>
+        <div class="filtro-precio">
+            <label for="filtroPrecioDesde" id="labelPrecio">Precio:</label>
+            <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
+            <label for="filtroPrecioHasta" id="guion">-</label>
+            <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
+        </div>
+ 
+        <!-- Fila 2 -->
         <div class="filtromuni">
             <label for="filtroMunicipio">Municipio:</label>
             <input type="text" id="filtroMunicipio" class="small-input">
         </div>
-
-        <!-- Fila 2 -->
-        <div class="filtrotipo">
-            <label for="filtroTipo">Tipo:</label>
-            <select id="filtroTipo" class="small-input">
+        <div class="filtrodistrito">
+            <label for="filtroDistrito">Distrito:</label>
+            <input type="text" id="filtroDistrito" class="small-input">
+        </div>
+        <div class="filtroestado">
+            <label for="filtroEstado">Estado del inmueble:</label>
+            <select id="filtroEstado" class="small-input">
                 <option value="cualquiera">Cualquiera</option>
-                <option value="Piso">Piso</option>
-                <option value="Apartamento">Apartamento</option>
-                <option value="Casa">Casa</option>
+                <option value="regular">Regular o mejor</option>
+                <option value="buen">Bien o mejor</option>
+                <option value="excelente">Excelente</option>
             </select>
         </div>
+        <!-- Fila 3 -->
         <div class="filtrohab">
             <label for="filtroHabitaciones">Nº Habitaciones</label>
             <input type="number" id="filtroHabitaciones" min="0" class="small-input">
@@ -149,20 +166,6 @@
             <label for="filtroBanos">Nº Baños:</label>
             <input type="number" id="filtroBanos" min="0" class="small-input">
         </div>
-
-        <!-- Fila 3 -->
-        <div class="filtro-precio">
-            <label for="filtroPrecioDesde" id="labelPrecio">Precio:</label>
-            <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
-            <label for="filtroPrecioHasta" id="guion">-</label>
-            <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
-        </div>
-
-        <div class="filtrodistrito">
-            <label for="filtroDistrito">Distrito:</label>
-            <input type="text" id="filtroDistrito" class="small-input">
-        </div>
-        <!-- Fila 4 -->
         <div class="filtro-precio">
             <label for="filtroSuperficieDesde">Superficie:</label>
             <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
