--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -16,8 +16,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <!--iconos bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <!--select del bootstrap-->
 
     <link rel="stylesheet" href="css/inicio.css">
 
@@ -72,6 +70,7 @@
         </div>
 
         <div class="carousel-inner">
+
             <div class="carousel-item active">
                 <img src="img/FotosMalaga/malagaInicio.jpg" class="d-block w-100" alt="Imagen de la bahía de Málaga">
                 <div class="carousel-caption">
@@ -82,7 +81,7 @@
             <div class="carousel-item">
                 <img src="img/FotosMalaga/catedral.jpg" class="d-block w-100" alt="Imagen de la farola de Málaga">
                 <div class="carousel-caption">
-                    <h5>Catedral de Málaga</h5>
+                    <h5>Farola de Málaga</h5>
                 </div>
             </div>
 
@@ -90,7 +89,7 @@
                 <img src="img/FotosMalaga/callelarios.jpg" class="d-block w-100"
                     alt="Imagen de la playa de la Malagueta de Málaga">
                 <div class="carousel-caption">
-                    <h5>Calle Larios</h5>
+                    <h5>Malagueta</h5>
                 </div>
             </div>
         </div>
@@ -106,7 +105,6 @@
             <span class="visually-hidden">Previous</span>
         </button>
     </div>
-
 <!---------------------------------------------------------------------------------->
 <!------------------------------------BUSCAR---------------------------------------------->
 
@@ -248,13 +246,8 @@
 
     <!-- All Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz4fnFO9gybBogGzOg9QEl6v2IHMQI1zHl6iYkGUfDkSR5iqFyAJ1voB4B" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cn7l7gDp0eyX+0PR4mtG0Wv6CGCkQe1kN3I3ZoR5HGL5o7B4pXGcV4Kg0nsMSVDX" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
