Sobre nosotros completado

--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -55,8 +55,8 @@
     <section class="questions container">
         <h2 class="subtitle">Preguntas frecuentes</h2>
         <p class="questions_paragraph">
-            A continuación se ofrece un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
-            diferentes posibilidades que ofrecidos, para daros un servicio eficiente y sencillo.
+            A continuación se muestra un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
+            diferentes posibilidades que ofrecemos, para dar un servicio eficiente y sencillo.
         </p>
         <section class="questions__container">
             <article class="questions__padding">
@@ -69,10 +69,31 @@
                     </h3>
                     <div class="questions__show">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Sequi vel vero
-                            consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                            tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
+                            Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
+                            uno de nuestros miembros se pondrá en contacto con usted. </p>
+
+                           <p> Si desea poner en venta o alquiler su propiedad, en el apartado<b> "Gestiona tu propiedad"</b> podrá rellenar un formulario 
+                            con sus datos de contacto, y de igual manera, uno de nuestros agentes se pondrá en contacto con usted para comenzar la gestión de su propiedad. </p>
+
+                            <p> Si tiene alguna duda o consulta referente a otros temas, podrá ponerse en contacto con nosotros a través del correo electrónico o el 
+                            número de teléfono que aparecen en el pie de página.</p>
+                        </p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="questions__padding">
+                <div class="questions__answer">
+                    <h3 class="questions__title">
+                        ¿Cómo busco inmuebles?
+                        <span class="questions__arrow">
+                            <i class="questions__i bi bi-arrow-up-short"></i>
+                        </span>
+                    </h3>
+                    <div class="questions__show">
+                        <p>
+                            En la página <b>"Inicio"</b> podrá encontrar un listado con los inmuebles disponibles. Si desea filtrar la búsqueda para encontrar
+                            un tipo de inmueble más específico, podrá hacerlo a través de la barra de búsqueda, donde hay varios filtros y categorías para seleccionar. 
                         </p>
                     </div>
                 </div>
@@ -88,27 +109,9 @@
                     </h3>
                     <div class="questions__show">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
-                            consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                            tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
-                        </p>
-                    </div>
-                </div>
-            </article>
-
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">
-                        ¿Cómo busco casas?
-                        <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-short"></i>
-                        </span>
-                    </h3>
-                    <div class="questions__show">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
-                            consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                            tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
+                            En la sección <b>"Calculadora de hipoteca"</b> ofrecemos una herramienta que le permitirá simular la cuota mensual de su hipoteca. Tan solo deberá
+                            introducir los datos que se le solicitan y la calculadora le mostrará el resultado. Los campos que se requieren vienen explicados en la misma 
+                            sección.
                         </p>
                     </div>
                 </div>
@@ -177,10 +180,10 @@
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona.jpg" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Ana</h3>
+                                <img src="img/persona3.png" class="img-fluid rounded-circle perfil" alt="">
+                                <h3 class="card-title py-2">Rubén</h3>
                                 <p class="card-text">
-                                    Agente inmobiliaria con más de 15 años de experiencia en el mercado.
+                                    Conocedor de la zona de Málaga y experto en la venta de propiedades.
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
@@ -198,10 +201,10 @@
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona.jpg" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Ana</h3>
+                                <img src="img/persona4.png" class="img-fluid rounded-circle perfil" alt="">
+                                <h3 class="card-title py-2">Francisco</h3>
                                 <p class="card-text">
-                                    Agente inmobiliaria con más de 15 años de experiencia en el mercado.
+                                    Experto en finanzas, confiable y profesional.
                                 </p>
                                 <p class="socials">
                                     <a href="https://www.twitter.com" target="_blank"
