--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -87,6 +87,20 @@
         <div class="row">
             <div class="col-md-8">
                 <div id="carouselContainer" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="0" class="active" aria-current="true"
+                            aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="1" aria-current="true"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselE" data-bs-slide-to="2" aria-current="true"
+                            aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="3" aria-current="true"
+                            aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="4" aria-current="true"
+                            aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#carouselE" data-bs-slide-to="5" aria-current="true"
+                            aria-label="Slide 6"></button>
+                    </div>
                     <div class="carousel-inner" id="carouselInner">
                         <!-- Aquí se insertarán las imágenes del carrusel -->
                     </div>
@@ -195,43 +209,47 @@
         });
     </script>
 
-    <footer>
+    <!---------------------------------------------------------------------------------->
+    <!--------------------------------FOOTER-------------------------------------------------->
+
+    <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="./img/logo_blanco.png" alt="Logo">
+                        <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
                     </a>
                 </figure>
             </div>
             <div class="box">
-                <h2>Sobre Nosotros</h2>
-                <p class="mt-4 mb-5"><i class="bi bi-geo-alt-fill"></i> Av. Louis Pasteur, 25, 29010 Málaga</p>
-                <p class="mt-4 mb-5"><i class="bi bi-telephone-fill"></i>+34 684 00 21 02</p>
-                <p class="mt-4 mb-5"><i class="bi bi-envelope-at-fill"></i>info@malagadreamhome.com</p>
-                <p class="mt-4 mb-5"><i class="bi bi-clock-fill"></i>Lunes - Viernes: 9:00 - 18:00h</p>
+                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
+                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
+                    malagadreamhome@gmail.es</p>
             </div>
+
             <div class="box">
-                <h2>Síguenos</h2>
-                <div class="red-social">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
+                <h2>SIGUENOS</h2>
+                <div class="redes-social">
+                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
+                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
+                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
+                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
                 </div>
             </div>
         </div>
+
         <div class="grupo-2">
-            <small>© 2023 <b>Málaga Dream Home</b> - Todos los Derechos Reservados</small>
+            <small>
+                &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
+            </small>
         </div>
     </footer>
 
     <!-- All Javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-VkY3o0C4a1KcnIrORchlfWtvnAfGQ9Btz4yPi7PhtJXtw2iqJsyOxINpD5+K9AiB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+    <!-- All Js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
