--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -24,39 +24,37 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <!---------------------------------------------------------------------------------->
+<!------------------------------------NAVEGACION---------------------------------------------->
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
                 aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="#" class="nav-link active" aria-current="page">Inicio</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
-
                    <li class="nav-item">
                         <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </nav>
+
+    <!---------------------------------------------------------------------------------->
+<!------------------------------------CARRUSEL---------------------------------------------->
 
     <div id="carouselE" class="carousel slide" data-bs-ride="carousel">
         <!--para los indicadores de abajo-->
@@ -89,7 +87,7 @@
                 <img src="img/FotosMalaga/callelarios.jpg" class="d-block w-100"
                     alt="Imagen de la playa de la Malagueta de Málaga">
                 <div class="carousel-caption">
-                    <h5>Malagueta</h5>
+                    <h5>Calle Larios</h5>
                 </div>
             </div>
         </div>
@@ -180,7 +178,7 @@
 
 
 
-<script src="Piso.js"></script>
+<script src="js/Piso.js"></script>
 
 
 
