--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-header text-center text-white pb-5">
-                    <h2>Gestiona</h2>
+                    <h2>Gestiona tu propiedad</h2>
                     <p>Aquí podrá usted contactar de forma directa si desea vender o alquilar su propiedad</p>
                 </div>
             </div>
