Añadido resetear filtros

--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -167,7 +167,7 @@
                     </tr>
                     <tr>
                         <td>Estado:</td>
-                        <td>${pisoSeleccionado.estado}</td>
+                        <td>${pisoSeleccionado.estado} estado</td>
                     </tr>
                     <tr>
                         <td>Operación:</td>
@@ -175,7 +175,7 @@
                     </tr>
                     <tr>
                         <td>Superficie:</td>
-                        <td>${pisoSeleccionado.superficie}</td>
+                        <td>${pisoSeleccionado.superficie} metros cuadrados</td>
                     </tr>
                 </tbody>
             </table>
