--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -107,6 +107,13 @@
                         <button id="submit-btn" class="btn btn-primary btn-lg btn-block mt-3" type="submit" disabled>Enviar</button>
                     </div>
                 </form>
+                <div class="col-md-12">
+                    <div class="mb-3">
+                        <p class="text-white">
+                            (*): Campos obligatorios
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
