--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -171,19 +171,12 @@
     </div>
 </div>
 <div class="container text-center"> <!-- Contenedor adicional para centrar el botón -->
+    <button id="btnEliminarFiltros" class="btn btn-secondary">Eliminar Filtros</button> 
     <button id="btnAplicarFiltros" class="btn btn-primary">Aplicar Filtros</button>
 </div>
 
 
-
-
-
 <script src="js/Piso.js"></script>
-
-
-
-
-    
 
 <!---------------------------------------------------------------------------------->
 <!-----------------------------------CASASSSSS----------------------------------------------->
