--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -116,6 +116,8 @@
                 <option value="Piso">Piso</option>
                 <option value="Apartamento">Apartamento</option>
                 <option value="Casa">Casa</option>
+                <option value="Trastero">Trastero</option>
+                <option value="Local">Local comercial</option>
             </select>
         </div>
        
